--- a/src/docs/index.adoc
+++ b/src/docs/index.adoc
@@ -3,7 +3,7 @@
 //
 // ====================================
 
-= image:LogoASW.png[arc42] Sample React Application Tutorial
+= image:LogoASW.png[arc42] VIADE ES4C
 // toc-title definition MUST follow document title without blank line!
 :toc: left
 :toc-title: Table of Contents
