--- a/src/docs/03_system_scope_and_context.adoc
+++ b/src/docs/03_system_scope_and_context.adoc
@@ -40,6 +40,8 @@ The title of the table is the name of your system, the three columns contain the
 ****
 
 **<Diagram or Table>**
+Meter diagrama que señale que index.js lanza las diferentes páginas, el user se relaciona con index.js, lo lanza. También React, que lo buildea.
+Vamos, copiar esto: https://hsc.aim42.org/documentation/hsc_arc42.html#_context
 
 **<optionally: Explanation of external domain interfaces>**
 
@@ -60,7 +62,8 @@ together with a mapping table showing the relationships between channels and inp
 ****
 
 **<Diagram or Table>**
-
+Diagrama representando el input y output online con el usuario, también relación con el servidor SOLID
+TODO Cuando sepamos que herramienta usar
 **<optionally: Explanation of technical interfaces>**
 
 **<Mapping Input/Output to Channels>**
