Principio del documento 02_architecture_constraints.adoc hecho

--- a/src/docs/02_architecture_constraints.adoc
+++ b/src/docs/02_architecture_constraints.adoc
@@ -1,19 +1,15 @@
 [[section-architecture-constraints]]
-== Architecture Constraints
+== Restricciones de la Arquitectura
 
-
-[role="arc42help"]
 ****
-.Contents
-Any requirement that constrains software architects in their freedom of design and implementation decisions or decision about the development process. These constraints sometimes go beyond individual systems and are valid for whole organizations and companies.
 
-.Motivation
-Architects should know exactly where they are free in their design decisions and where they must adhere to constraints.
-Constraints must always be dealt with; they may be negotiable, though.
+[options="header",cols="1,2"]
+|===
+| Restricción | Explicación
+| SOLID | Es una organización cuyo objetivo principal es descentralizar los datos de manera que cada usuario tenga el control total sobre sus propios datos
+| React | Es una biblioteca de Javascript que permite crear interfaces de usuario sencillas y fáciles de reutilizar. es un software de código abierto, mantenido por Facebook y los usan compañias como Airbnb o Instagram
+| Arc42 | Son un conjunto de plantillas usadas en el desarrollo de un producto de software. Estas plantillas se diferencian de otras documentaciones en que la extensión es menor ya que mediante diagramas y partes del código no requiere tanto texto.
 
-.Form
-Simple tables of constraints with explanations.
-If needed you can subdivide them into
-technical constraints, organizational and political constraints and
-conventions (e.g. programming or versioning guidelines, documentation or naming conventions)
+|===
+
 ****
