--- a/src/docs/01_introduction_and_goals.adoc
+++ b/src/docs/01_introduction_and_goals.adoc
@@ -3,73 +3,60 @@
 
 [role="arc42help"]
 ****
-Describes the relevant requirements and the driving forces that software architects and development team must consider. These include
-
-* underlying business goals, essential features and functional requirements for the system
-* quality goals for the architecture
-* relevant stakeholders and their expectations
+Se realizará una aplicación web descentralizada de rutas siguiendo las especificaciones SOLID.	Los usuarios podrán almacenar rutas,visualizarlas en un mapa y podrán compartir fotos, vídeos u otro tipo de ficheros con  amigos.
 ****
 
 === Requirements Overview
 
+
+==== Funcionales
 [role="arc42help"]
 ****
-.Contents
-Short description of the functional requirements, driving forces, extract (or abstract)
-of requirements. Link to (hopefully existing) requirements documents
-(with version number and information where to find it).
+- La aplicación se basará en una arquitectura descentralizada en la que los datos están separados de la aplicación
+- Los deberán poder visualizar las rutas en un mapa y almacenarlas en sus propiods pods. Además, se podrá tener amigos y grupos de amigos con quien compartir las rutas,fotos,vídeos,etc. 
+****
 
-.Motivation
-From the point of view of the end users a system is created or modified to
-improve support of a business activity and/or improve the quality.
-
-.Form
-Short textual description, probably in tabular use-case format.
-If requirements documents exist this overview should refer to these documents.
-
-Keep these excerpts as short as possible. Balance readability of this document with potential redundancy w.r.t to requirements documents.
+=== No funcionales
+[role="arc42help"]
+****
+- El sistema deberá ser accesible e intuituvo para todo tipo de usuario, especialmente el novato.
+- Evitar comprometer la información de los usuarios descentralizando los datos.
+- Seguir las recomendaciones del w3c.
 ****
 
 === Quality Goals
 
 [role="arc42help"]
 ****
-.Contents
-The top three (max five) quality goals for the architecture whose fulfillment is of highest importance to the major stakeholders. We really mean quality goals for the architecture. Don't confuse them with project goals. They are not necessarily identical.
+.Table Goals
+[options="header",cols="2"]
+|===
+|Goal|Description
+|Accesibilidad|
+|Disponibilidad|
+|Interoperabilidad|
+|Seguridad|
+|Testeabilidad|
+|Escalabilidad|
+|Consistencia|
+|Usabilidad|
+|Modularidad|
+|===
 
-.Motivation
-You should know the quality goals of your most important stakeholders, since they will influence fundamental architectural decisions. Make sure to be very concrete about these qualities, avoid buzzwords.
-If you as an architect do not know how the quality of your work will be judged …
-
-.Form
-A table with quality goals and concrete scenarios, ordered by priorities
 ****
 
 === Stakeholders
 
 [role="arc42help"]
 ****
-.Contents
-Explicit overview of stakeholders of the system, i.e. all person, roles or organizations that
-
-* should know the architecture
-* have to be convinced of the architecture
-* have to work with the architecture or with code
-* need the documentation of the architecture for their work
-* have to come up with decisions about the system or its development
-
-.Motivation
-You should know all parties involved in development of the system or affected by the system.
-Otherwise, you may get nasty surprises later in the development process.
-These stakeholders determine the extent and the level of detail of your work and its results.
-
-.Form
-Table with role names, person names, and their expectations with respect to the architecture and its documentation.
-****
-
+.Table Stakeholders
 [options="header",cols="1,2,2"]
 |===
 |Role/Name|Contact|Expectations
-| _<Role-1>_ | _<Contact-1>_ | _<Expectation-1>_
-| _<Role-2>_ | _<Contact-2>_ | _<Expectation-2>_
+| Usuarios de la aplicación | _<Contact-1>_ | _<Expectation-1>_
+| Profesores | _<Contact-2>_ | _<Expectation-2>_
+| Desarrolladores | _<Contact-2>_ | _<Expectation-2>_
 |===
+****
+
+
