--- a/src/docs/03_system_scope_and_context.adoc
+++ b/src/docs/03_system_scope_and_context.adoc
@@ -20,6 +20,13 @@ Various options:
 * Lists of communication partners and their interfaces.
 ****
 
+The scope of our project is a website where the users can create, explore and share routes without the related data being stored on a third-party server. So, a sharing website where all the shared data belongs to the private server of each user making use of SOLID. 
+
+Each user will be able to create new routes using a map form OpenStreetMap or importing it from a text file, save them on their PODs and share them with other users, publicly (to all the users) or privately (to concrete users).
+The shared routes will have descriptions, categories and tags so other users can search them easily through the use of diverse filters. Clients will also be able to comment and rate those public routes. 
+Users can befriend others users and join groups, building on that social side they will be able to select friends and groups to share their routes with.
+
+The application will be able to load and show routes made with other apps as well as exporting routes to those external formats simplifying the integration with those similar apps.
 
 === Business Context
 
@@ -40,8 +47,6 @@ The title of the table is the name of your system, the three columns contain the
 ****
 
 **<Diagram or Table>**
-Meter diagrama que señale que index.js lanza las diferentes páginas, el user se relaciona con index.js, lo lanza. También React, que lo buildea.
-Vamos, copiar esto: https://hsc.aim42.org/documentation/hsc_arc42.html#_context
 
 **<optionally: Explanation of external domain interfaces>**
 
@@ -61,9 +66,4 @@ together with a mapping table showing the relationships between channels and inp
 
 ****
 
-**<Diagram or Table>**
-Diagrama representando el input y output online con el usuario, también relación con el servidor SOLID
-TODO Cuando sepamos que herramienta usar
-**<optionally: Explanation of technical interfaces>**
-
-**<Mapping Input/Output to Channels>**
+The descentralized server system of the application will make use of SOLID storing all the user's data on their respective PODs. This will be integrated through the use of React, which will be the library of Javascript used to make all the interfaces of the application. An important key in the interaction and manageability of the web when communicating with the users will be the maps, which will be offered making use of OpenStreetMaps API.
