--- a/src/docs/03_system_scope_and_context.adoc
+++ b/src/docs/03_system_scope_and_context.adoc
@@ -46,6 +46,15 @@ Alternatively (or additionally) you can use a table.
 The title of the table is the name of your system, the three columns contain the name of the communication partner, the inputs, and the outputs.
 ****
 
+A user can store routes of varius types that will be kept in his POD. He can also share the routes
+and other type of files with his friends
+
+	* Regular user: Stores his own routes.
+	* Sender: Sends multimedia or files to other user
+	* Receiver user: Receives multimedia or files from other user.
+	* Pod: Each user has a POD where the routes and the shared information are stored.
+	* Viade: Decentralized application to store routes and share with other people.
+
 **<Diagram or Table>**
 
 **<optionally: Explanation of external domain interfaces>**
