--- a/src/docs/01_introduction_and_goals.adoc
+++ b/src/docs/01_introduction_and_goals.adoc
@@ -1,7 +1,6 @@
 [[section-introduction-and-goals]]
 == Introduction and Goals
 
-[role="arc42help"]
 ****
 Se realizará una aplicación web descentralizada de rutas siguiendo la arquitectura SOLID y el framework React. Con ella, los usuarios podrán almacenar rutas, visualizarlas en un mapa y podrán compartir fotos, vídeos u otro tipo de ficheros con sus amigos o sus grupos de amigos.
 ****
@@ -10,7 +9,6 @@ Se realizará una aplicación web descentralizada de rutas siguiendo la arquitec
 
 
 ==== Funcionales
-[role="arc42help"]
 ****
 - Los usuarios deberán poder visualizar las rutas en un mapa y almacenarlas en sus propios pods.
 - Al usar sus propios pods, la información estará totalmente descentralizada, favoreciendo la seguridad de los datos.
@@ -18,7 +16,6 @@ Se realizará una aplicación web descentralizada de rutas siguiendo la arquitec
 ****
 
 === No funcionales
-[role="arc42help"]
 ****
 - El sistema deberá ser accesible e intuituvo para todo tipo de usuario, aunque se buscará especialmente favorecer a aquellos con menos experiencia en aplicaciones de este estilo.
 - Evitar comprometer la información de los usuarios descentralizando los datos en pods independientes para cada usuario.
@@ -27,10 +24,8 @@ Se realizará una aplicación web descentralizada de rutas siguiendo la arquitec
 
 === Quality Goals
 
-[role="arc42help"]
 ****
 .Table Goals
-[options="header",cols="2"]
 |===
 |Goal|Description
 |Accesibilidad|A la aplicación debe admitir y estar preparada para todo tipo de usuario, independientemente de sus capacidades, problemas cognitivos...
@@ -47,7 +42,6 @@ Se realizará una aplicación web descentralizada de rutas siguiendo la arquitec
 
 === Stakeholders
 
-[role="arc42help"]
 ****
 .Table Stakeholders
 [options="header",cols="1,2,2"]
@@ -55,7 +49,7 @@ Se realizará una aplicación web descentralizada de rutas siguiendo la arquitec
 |Role/Name|Contact|Expectations
 | Usuarios de la aplicación | _Estos representan a los usuarios finales de la aplicación_ | _Tener a su disposición una aplicación que les permita almacenar sus rutas y comparirlas con sus amigos._
 | Profesores | _Quienes evalúan el proyecto que se está realizando_ | _Encontrar un proyecto que cumpla con los requisitos expuestos anteriormente._
-| Desarrolladores | _Quienes se encargarán de desarrollar el producto_ | _Realizar un sistema que cumpla con los requisitos expuestos anteriormente._
+| Desarrolladores/Developers| _Quienes se encargarán de desarrollar el producto_ | _Realizar un sistema que cumpla con los requisitos expuestos anteriormente._
 |===
 ****
 
