--- a/src/docs/10_quality_scenarios.adoc
+++ b/src/docs/10_quality_scenarios.adoc
@@ -1,7 +1,6 @@
 [[section-quality-scenarios]]
 == Quality Requirements
 
-
 [role="arc42help"]
 ****
 
@@ -16,6 +15,8 @@ Since quality requirements will have a lot of influence on architectural
 decisions you should know for every stakeholder what is really important to them,
 concrete and measurable.
 ****
+
+
 
 === Quality Tree
 
@@ -35,6 +36,23 @@ The quality tree is a high-level overview of the quality goals and requirements:
 
 In any case the tree should include links to the scenarios of the following section.
 ****
+
+This development aims to fulfill the quality requirements specified in the following tree diagram.
+
+[plantuml, 10_quality_tree, png]
+....
+digraph G {
+    Quality -> Accesibility
+    Quality -> Consistency
+    Quality -> Disponibility
+    Quality -> Flexibility
+    Quality -> Maintainability
+    Quality -> Performance
+    Quality -> Security
+    Quality -> Usability
+    Quality -> Testeability
+}
+....
 
 === Quality Scenarios
 
@@ -61,3 +79,42 @@ more precisely down to a level of scenarios that can be discussed and evaluated.
 .Form
 Tabular or free form text.
 ****
+
+Achieving the expected response of the application for the following scenarios is the goal to meet the quality expectations.
+
+==== Accesibility
+
+===== Scenario #1: Colorblind clarity
+[%collapsible]
+====
+[horizontal]
+Who:: Colorblind user
+When:: Using the application
+Where:: GUI
+What:: The user interface must be adapted to be easily usable by all the colorblindness types
+How:: Through the use of a valid palette, icons and texts
+====
+
+===== Scenario #2: Navigable using keyboard
+[%collapsible]
+====
+[horizontal]
+Who:: Any user
+When:: Using the application
+Where:: GUI
+What:: The user should be able to navigate through the whole application using only the keyboard
+How:: Thorugh the use of correct shotcuts, tab navegation and mnemonics
+====
+
+==== Flexibility
+
+===== Scenario #3: Compatibility with multiple formats
+[%collapsible]
+====
+[horizontal]
+Who:: Any user
+When:: Importing or exporting routes
+Where:: Routes manager
+What:: The user should be able to import and export the routes to, at least: GeoJSON, KML and GPX
+How:: Using the relevant conversors
+====
