--- a/src/docs/05_building_block_view.adoc
+++ b/src/docs/05_building_block_view.adoc
@@ -8,7 +8,7 @@
 .Content
 The building block view shows the static decomposition of the system into building blocks (modules, components, subsystems, classes,
 interfaces, packages, libraries, frameworks, layers, partitions, tiers, functions, macros, operations,
-datas structures, ...) as well as their dependencies (relationships, associations, ...)
+datas structures, ...) as well as their dependencies (relationships, associations, ...).
 
 This view is mandatory for every architecture documentation.
 In analogy to a house this is the _floor plan_.
