--- a/src/docs/05_building_block_view.adoc
+++ b/src/docs/05_building_block_view.adoc
@@ -8,7 +8,7 @@ This section is a decomposition of our system into diagrams. Each level is more 
 
 Level 1 show us a global vision of the project.
 
-image:image:images/05_Level1.png["General View"]
+image:images/05_Level1.PNG["General View"]
 
 .Level 1 descriptions
 |===
