--- a/src/docs/01_introduction_and_goals.adoc
+++ b/src/docs/01_introduction_and_goals.adoc
@@ -25,13 +25,10 @@ A decentralized web application of routes will be made following the SOLID archi
 .Table Goals
 |===
 |Goal|Description
-|Accessibility|The application must support and be prepared for all types of users, regardless of their abilities, cognitive problems...
-|Availability|The web must be available to its users at all times and, in case of failure, the error must be quickly repaired.
-|Security|User data must be protected to prevent third parties from accessing them.
-|Testability|Tests must be able to be carried out to check the correct functioning of the system.
+|Mainteinability|The website can be easily maintained and progressively expanded in a simple way as development progresses, either by extending existing features or by adding new ones.
 |Performance|The system must be effective and react quickly to user requests for action.
-|Scalability|The website can be progressively expanded in a simple way as development progresses, either by extending existing features or by adding new ones.
-|Consistency|The data storage system must keep the information in a correct state all the time.
+|Privacy|User data should be stored out of the internal servers and protected to prevent third parties from accessing them.
+|Testability|Tests must be able to be carried out to check the correct functioning of the system.
 |Usability|The application must be intuitive and easy to use by any type of user.
 |===
 
