--- a/src/docs/06_runtime_view.adoc
+++ b/src/docs/06_runtime_view.adoc
@@ -3,7 +3,7 @@
 
 === Get a friend's route
 
-This is a general view about how we get a friend's route
+This is a general view of how we get a friend's route
 
 image:images/06_Get_Route.png["Get a route"]
 
