ahora es JavaScript

--- a/src/docs/09_design_decisions.adoc
+++ b/src/docs/09_design_decisions.adoc
@@ -5,7 +5,7 @@
 
 | Version-control system| Github 
 
-| Programming language | JavScripts
+| Programming language | JavaScript
 
 | Distributed application structure | Solid
 
