--- a/src/docs/10_quality_scenarios.adoc
+++ b/src/docs/10_quality_scenarios.adoc
@@ -50,7 +50,7 @@ digraph G {
 }
 ....
 
-image::images/10_quality_tree_extended.png[Quality Tree Extended]
+image:10_quality_tree_extended.png[Quality Tree Extended]
 
 === Quality Scenarios
 
