--- a/src/docs/02_architecture_constraints.adoc
+++ b/src/docs/02_architecture_constraints.adoc
@@ -10,7 +10,8 @@
 | React | It is a Javascript library that allows you to create user interfaces that are simple and easy to reuse. It is an open source software, maintained by Facebook and used by companies such as Airbnb or Instagram
 | Arc42 | They are a set of templates used in the development of a software product. These templates differ from other documentation in that the extension is smaller since by means of diagrams and parts of the code it does not require so much text.
 | GitHub | It is a collaborative software development platform to host projects using the Git version control system
-
+| Components | In this project 7 components collaborate, contributing with different parts of the project each one and making progress together
+| Project Time | We have 4 months to develop the hole project 
 
 |===
 
