--- a/src/docs/06_runtime_view.adoc
+++ b/src/docs/06_runtime_view.adoc
@@ -1,11 +1,17 @@
 [[section-runtime-view]]
 == Runtime View
 
-=== Get a friend's route
+=== Log in
 
-This is a general view of how we get a friend's route
+This is a general view of how to access viade's web
 
-image:images/06_Get_Route.png["Get a route"]
+image:images/06_LogIn.png["Log in"]
 
+
+=== Get your own Routes
+
+This is a general view of how can you see your Routes
+
+image:images/06_ReadRoutes.png["Get ur Routes"]
 
 
