Ahora si 06 final i promise

--- a/src/docs/06_runtime_view.adoc
+++ b/src/docs/06_runtime_view.adoc
@@ -1,6 +1,8 @@
 [[section-runtime-view]]
 == Runtime View
 
+Here are some Scenarios to understand how Viade works
+
 === Log in
 
 This is a general view of how to access viade's web
